# quick-connect-bluetooth-device

./: .gitignore  .output.txt  Cargo.toml  README.md  design.md  design.template.md  project-kickstart-prompt.md  requirements.md  requirements.template.md  task.md  task.template.md
.junie/: guidelines.md
src/: main.rs
src/bluetooth/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
