[package]
name = "connect-bluetooth-device"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
windows = { version = "0.52", features = [
    "Win32_Devices_Bluetooth",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_NetworkManagement_WiFi"
] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
